[tool.poetry]
name = "supadantic"
version = "0.0.1"
description = "Supabase integration for pydantic"
authors = ["Alexey Makridenko <alexey.makridenko@gmail.com>"]
license = "MIT license"
readme = "README.md"
packages = [{include = "src"}]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.poetry.dependencies]
python = "^3.10"
supabase = "^2.4.2"
pydantic = "^2.7.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
