[tool.poetry]
name = "supadantic"
version = "0.0.6"
description = "Supabase integration for pydantic"
authors = ["Alexey Makridenko <alexey.makridenko@gmail.com>"]
license = "MIT license"
readme = "README.md"
packages = [{include = "supadantic"}]

[tool.pytest.ini_options]
pythonpath = "supadantic"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.mypy]
ignore_missing_imports = true
plugins = [
  'pydantic.mypy',
]

[tool.poetry.dependencies]
python = "^3.10"
supabase = "^2.4.2"
pydantic = "^2.11.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-mock = "^3.14.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.21"
mkdocstrings = "^0.26.1"
mkdocstrings-python = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
